Minimized ICS Java 17 image
Issue-ID: NONRTRIC-845
Signed-off-by: BjornMagnussonXA <bjorn.magnusson@est.tech>
Change-Id: Ia2c3dba8febfae2d94f672e3127fa1cdd1233ab7